--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "client side for ajax plugin session",
   "main": "dist/fmihel-ajax-plugin-session.min.js",
   "scripts": {
+    "npm-publish-patch": "npm run build && npm version patch && npm publish",
+    "npm-publish-minor": "npm run build && npm version minor && npm publish",
+    "npm-publish-major": "npm run build && npm version major && npm publish",
+    "npm-publish-beta": "npm run build && npm publish  --tag beta",
+    "git-push": "git push origin main && git push origin main --tag",
     "build": "npm run build-dist && npm run build-dist-min",
     "build-dist": "rollup -c rollup.config.js",
-    "build-dist-min": "rollup -c rollup.config.min.js",
-    "npm-publish-patch": "npm run build && npm version patch && npm publish && npm run git-push",
-    "npm-publish-minor": "npm run build && npm version minor && npm publish && npm run git-push",
-    "npm-publish-major": "npm run build && npm version major && npm publish && npm run git-push",
-    "npm-publish-beta": "npm run build && npm publish  --tag beta",
-    "git-push": "git push origin main && git push origin main --tag"
+    "build-dist-min": "rollup -c rollup.config.min.js"
   },
   "repository": {
     "type": "git",
